[tool.poetry]
name = "awesome"
version = "0.1.0"
description = ""
authors = ["Aidan O'Brien"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.8,<3.12"
pandas = "^2.1.1"
streamlit = "^1.27.0"
altair = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
